k8s/base/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: -service
spec:
  selector:
    app: MASSEDIT
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
